// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec contenu de début et de fin 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="max-h-[80%]"
    >
      Début
    </span>
    <span
      class="flex-1 font-normal px-2 pl-1 pr-1 text-inherit text-sm"
    >
      Contenu
    </span>
    <span
      class="max-h-[80%]"
    >
      Fin
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes couleurs 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      default
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes couleurs 2`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-primary text-primary-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      primary
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes couleurs 3`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-secondary text-secondary-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      secondary
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes couleurs 4`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-success text-success-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      success
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes couleurs 5`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-warning text-warning-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      warning
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes couleurs 6`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-danger text-danger-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      danger
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes tailles 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-2 py-1 text-xs h-6 min-h-6 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-1 text-inherit text-xs"
    >
      Chip 
      sm
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes tailles 2`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      md
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes tailles 3`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-4 py-2 text-base h-8 min-h-8 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-base"
    >
      Chip 
      lg
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes variantes 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      solid
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes variantes 2`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap border-medium rounded-full bg-transparent inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 border-default text-default transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      bordered
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes variantes 3`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 text-default bg-default/20 transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      light
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes variantes 4`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-default-100 text-default-800 transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      flat
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes variantes 5`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap border-medium rounded-full border-default inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      faded
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec différentes variantes 6`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full shadow-lg shadow-default/50 inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip 
      shadow
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot avec les props par défaut 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip par défaut
    </span>
  </div>
</div>
`;

exports[`Composant Chip > Snapshots > devrait correspondre au snapshot quand désactivé 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min justify-between box-border whitespace-nowrap rounded-full opacity-disabled pointer-events-none inline-flex items-center gap-1.5 font-medium px-3 py-1.5 text-sm h-7 min-h-7 bg-default text-default-foreground transition-all duration-200"
  >
    <span
      class="flex-1 font-normal px-2 text-inherit text-sm"
    >
      Chip désactivé
    </span>
  </div>
</div>
`;
